--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -102,7 +102,7 @@
 		<p>Links to my Work</p>
 		<p>Couldn't quite figure this column out...</p>
 			<ul>
-				<li>1</li>
+				<li><a href="http://chandlerhcsmith.github.io/unit2_projects/week_4/w4_09_cultural_blog.html﻿">Wk4 Cultural Blog</a></li>
 				<li>2</li>
 				<li>3</li>
 				<li>4</li>
