--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -99,11 +99,13 @@
 
 
 	<div class="sidebar_right">
-		<p>Links to my Work</p>
+		<p>Blogs</p>
 			<ul>
 				<li><a href="http://ChandlerHCSmith.github.io/unit2_projects/week_4/w4_08_technical_blog.html﻿">Wk4 Technical Blog</a></li>
 				<li><a href="http://chandlerhcsmith.github.io/unit2_projects/week_4/w4_09_cultural_blog.html﻿">Wk4 Cultural Blog</a></li>
 				<li><a href="http://chandlerhcsmith.github.io/unit2_projects/week_5/w5_07_technical_blog 2.html">Wk5 Technical Blog</a></li>
+				<li><a href="http://ChandlerHCSmith.github.io/unit2_projects/week_5/w5_08_cultural_blog.html">Wk5 Cultural Blog</a></li>
+
 			</ul>
 	</div>
 
