Updated link to correct u2 w5 Tech Blog

--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -103,9 +103,8 @@
 			<ul>
 				<li><a href="http://ChandlerHCSmith.github.io/unit2_projects/week_4/w4_08_technical_blog.html﻿">Wk4 Technical Blog</a></li>
 				<li><a href="http://chandlerhcsmith.github.io/unit2_projects/week_4/w4_09_cultural_blog.html﻿">Wk4 Cultural Blog</a></li>
-				<li><a href="http://chandlerhcsmith.github.io/unit2_projects/week_5/w5_07_technical_blog 2.html">Wk5 Technical Blog</a></li>
+				<li><a href="http:// ChandlerHCSmith.github.io/unit2_projects/week_5/x_w5_07_technical_blog_2.html">Wk5 Technical Blog</a></li>
 				<li><a href="http://ChandlerHCSmith.github.io/unit2_projects/week_5/w5_08_cultural_blog.html">Wk5 Cultural Blog</a></li>
-
 			</ul>
 	</div>
 
