My Index Page a bit more Responsive

--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -10,6 +10,7 @@
 	<body>
 	<div class="header">
 		<p>My Dev_Bootcamp_Phase_of_Life<p>
+		<br>
 		<nav>	
 			<ul>
 				<li><a href="http://blog.teamtreehouse.com/css-positioning">Treehouse</a></li>
@@ -93,7 +94,7 @@
 
 
 		<h3>Dev BootCamp</h3>
-			<p>I am so excited and looking forward to learning and contributing.  I am so excited about work with others who have the same passion and getting to learn from them.</p>
+			<p>I am so excited and looking forward to learning and contributing.  I am so excited about working with others who have the same passion and getting to learn from them.</p>
 
 	</div>
 
