Index Link to Blogs Week 6

--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -106,6 +106,8 @@
 				<li><a href="http://chandlerhcsmith.github.io/unit2_projects/week_4/w4_09_cultural_blog.html﻿">Wk4 Cultural Blog</a></li>
 				<li><a href="http:// ChandlerHCSmith.github.io/unit2_projects/week_5/x_w5_07_technical_blog_2.html">Wk5 Technical Blog</a></li>
 				<li><a href="http://ChandlerHCSmith.github.io/unit2_projects/week_5/w5_08_cultural_blog.html">Wk5 Cultural Blog</a></li>
+				<li><a href="http://ChandlerHCSmith.github.io/unit2_projects/week_6/u2_w6_06_technical_blog.html">Wk6 Technical Blog</a></li>
+				<li><a href="http://ChandlerHCSmith.github.io/unit2_projects/week_6/u2_w6_07_cultural_blog.html">Wk6 Cultural Blog</a></li>
 			</ul>
 	</div>
 
