--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -108,6 +108,8 @@
 				<li><a href="http://ChandlerHCSmith.github.io/unit2_projects/week_5/w5_08_cultural_blog.html">Wk5 Cultural Blog</a></li>
 				<li><a href="http://ChandlerHCSmith.github.io/unit2_projects/week_6/u2_w6_06_technical_blog.html">Wk6 Technical Blog</a></li>
 				<li><a href="http://ChandlerHCSmith.github.io/unit2_projects/week_6/u2_w6_07_cultural_blog.html">Wk6 Cultural Blog</a></li>
+				<li><a href="http://aaa.html">Wk7 Technical Blog</a></li>
+				<li><a href="http://ChandlerHCSmith.github.io/unit3_projects/week_7/u3_w7_06_cultural_blog.html">Wk7 Cultural Blog</a></li>
 			</ul>
 	</div>
 
