u3_w8_Updated Links to Blogs

--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -110,6 +110,8 @@
 				<li><a href="http://ChandlerHCSmith.github.io/unit2_projects/week_6/u2_w6_07_cultural_blog.html">Wk6 Cultural Blog</a></li>
 				<li><a href="http://ChandlerHCSmith.github.io/unit3_projects/week_7/u3_w7_05_technical_blog.html">Wk7 Technical Blog</a></li>
 				<li><a href="http://ChandlerHCSmith.github.io/unit3_projects/week_7/u3_w7_06_cultural_blog.html">Wk7 Cultural Blog</a></li>
+				<li><a href="http://ChandlerHCSmith.github.io/unit3_projects/week_7/u3_w8_05_technical_blog.html">Wk8 Technical Blog</a></li>
+				<li><a href="http://ChandlerHCSmith.github.io/unit3_projects/week_7/u3_w8_06_cultural_blog.html">Wk8 Cultural Blog</a></li>
 			</ul>
 	</div>
 
