--- a/improved_website_pro/blogs.html
+++ b/improved_website_pro/blogs.html
@@ -19,11 +19,11 @@
 		<div class="main_nav">
 			<nav>	
 				<ul>
-					<li><a href="file:///Users/ChandlerHCSmith/Desktop/Website/pro_index.html">HOME</a></li>
-					<li><a href="file:///Users/ChandlerHCSmith/Desktop/Website/about.html">ABOUT</a></li>
-					<li><a href="file:///Users/ChandlerHCSmith/Desktop/Website/portfolio.html">PORTFOLIO</a></li>
-					<li><a href="file:///Users/ChandlerHCSmith/Desktop/Website/blogs.html">BLOG</a></li>
-					<li><a href="http://www.netflix.com/">CONTACT</a></li>
+					<li><a href="http://ChandlerHCSmith.github.io/improved_website_pro/pro_index.html">HOME</a></li>
+					<li><a href="http://ChandlerHCSmith.github.io/improved_website_pro/about.html">ABOUT</a></li>
+					<li><a href="http://ChandlerHCSmith.github.io/improved_website_pro/portfolio.html">PORTFOLIO</a></li>
+					<li><a href="http://ChandlerHCSmith.github.io/improved_website_pro/blogs.html">BLOG</a></li>
+					<li><a href="http:// ChandlerHCSmith.github.io/improved_website_pro/contact.html">CONTACT</a></li>
 				</ul>
 			</nav>
 		</div>
