added correct links

--- a/improved_website_pro/about.html
+++ b/improved_website_pro/about.html
@@ -19,11 +19,11 @@
 		<div class="main_nav">
 			<nav>	
 				<ul>
-					<li><a href="file:///Users/ChandlerHCSmith/Desktop/Website/pro_index.html">HOME</a></li>
-					<li><a href="file:///Users/ChandlerHCSmith/Desktop/Website/about.html">ABOUT</a></li>
-					<li><a href="file:///Users/ChandlerHCSmith/Desktop/Website/portfolio.html">PORTFOLIO</a></li>
-					<li><a href="file:///Users/ChandlerHCSmith/Desktop/Website/blogs.html">BLOG</a></li>
-					<li><a href="http://www.netflix.com/">CONTACT</a></li>
+					<li><a href="http://ChandlerHCSmith.github.io/improved_website_pro/pro_index.html">HOME</a></li>
+					<li><a href="http://ChandlerHCSmith.github.io/improved_website_pro/about.html">ABOUT</a></li>
+					<li><a href="http://ChandlerHCSmith.github.io/improved_website_pro/portfolio.html">PORTFOLIO</a></li>
+					<li><a href="http://ChandlerHCSmith.github.io/improved_website_pro/blogs.html">BLOG</a></li>
+					<li><a href="http://ChandlerHCSmith.github.io/improved_website_pro/contact.html">CONTACT</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -42,14 +42,6 @@
 
 		<h1 id="title_line_1">Chandler HC Smith</h1>
 		<h3 id="title_line_2"><i>PWD (in training)</i></h3>
-
-
-
-
-
-
-
-
 
 		<h3>0-University</h3>
 			<p>I was born in Marysville Arizona and only 10 months later relocated to Colorado, where I lived for next 10 years of my childhood.  Then, due to promotion that my father received, I moved to California where I spent the majority of my formative years. All the way from 4th grade to High School with its ups and downs to University with its fun challenging classes.
@@ -71,7 +63,7 @@
 		<h3>Prague, a Time of Change</h3>
 			<p>This was a time of change, of rediscovering myself.</p>
 			<p><strong><i>What did I want out of life?</i></strong></p>
-			<p>This is where my love of <a href="file:///Users/ChandlerHCSmith/Desktop/Website/photos.html">Photography</a> and design really took a more proper form.  I knew that I wanted to add something to this world that would revolutize people's lives.  I am convinced that I can do this through coding/programming and creating/inventing!  I am very interested in UX/UI and plan on being part of the team that moves forward in this area.</p>
+			<p>This is where my love of <a href="http://ChandlerHCSmith.github.io/improved_website_pro/photos.html">Photography</a> and design really took a more proper form.  I knew that I wanted to add something to this world that would revolutize people's lives.  I am convinced that I can do this through coding/programming and creating/inventing!  I am very interested in UX/UI and plan on being part of the team that moves forward in this area.</p>
 
 		<h3>Dev BootCamp</h3>
 			<p>I am so excited and looking forward to learning and contributing.  I am so excited about working with others who have the same passion and getting to learn from them.</p>
