Changed my professional description across pages

--- a/improved_website_pro/about.html
+++ b/improved_website_pro/about.html
@@ -14,7 +14,7 @@
 		<br>
 		<br>
 
-<!--		<h2 id="title_line_2"><i>Professional Web Developer (in training)</i></h2>    -->
+<!--		<h2 id="title_line_2"><i>Web Developer</i></h2>    -->
 		
 		<div class="main_nav">
 			<nav>	
@@ -41,7 +41,7 @@
 		<img id="bio_pic" src="images/CHCS.gif" alt="Photo of Author by the Grand Canyon">
 
 		<h1 id="title_line_1">Chandler HC Smith</h1>
-		<h3 id="title_line_2"><i>PWD (in training)</i></h3>
+		<h3 id="title_line_2"><i>Web Developer</i></h3>
 
 		<h3>0-University</h3>
 			<p>I was born in Marysville Arizona and only 10 months later relocated to Colorado, where I lived for next 10 years of my childhood.  Then, due to promotion that my father received, I moved to California where I spent the majority of my formative years. All the way from 4th grade to High School with its ups and downs to University with its fun challenging classes.
