--- a/improved_website_pro/pro_index.html
+++ b/improved_website_pro/pro_index.html
@@ -14,7 +14,7 @@
 		<br>
 		<br>
 
-<!--		<h2 id="title_line_2"><i>Professional Web Developer (in training)</i></h2>    -->
+<!--		<h2 id="title_line_2"><i>Professional Web Developer</i></h2>    -->
 		
 		<div class="main_nav">
 		<nav>	
@@ -34,7 +34,7 @@
 		<img id="feature_pic" src="images/arenal_cr.jpg" alt="Arenal in Costa Rica">
 
 		<h1 id="title_line_1">Chandler HC Smith</h1>
-		<h2 id="title_line_2"><i>Professional Web Developer (in training)</i></h2>
+		<h2 id="title_line_2"><i>Web Developer</i></h2>
 
 	</div>
 
