--- a/improved_website_pro/photos.html
+++ b/improved_website_pro/photos.html
@@ -14,7 +14,7 @@
 		<br>
 		<br>
 
-<!--		<h2 id="title_line_2"><i>Professional Web Developer (in training)</i></h2>    -->
+<!--		<h2 id="title_line_2"><i>Web Developer</i></h2>    -->
 		
 		<div class="main_nav">
 			<nav>	
