--- a/improved_website_pro/about.html
+++ b/improved_website_pro/about.html
@@ -75,7 +75,7 @@
 	</div>
 
 	<div class="footer">
-		<p>2014, Adverture Sundays SSR *</p>
+		<p>2014, Adventure Sundays SSR *</p>
 	</div>
 	</body>
 
