footer corrected spelling of Adventure

--- a/improved_website_pro/portfolio.html
+++ b/improved_website_pro/portfolio.html
@@ -44,7 +44,7 @@
 	<p id="body_paragraphs">Here's to us Boots!</p>
 
 	<div class="footer">
-		<p>2014, Adverture Sundays SSR *</p>
+		<p>2014, Adventure Sundays SSR *</p>
 	</div>
 	</body>
 
